# Trade-engine-

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: check-desktop-prereqs.ps1  multi-user-rollout-checklist.md  run-tauri-dev.ps1  supabase-multi-user-migration.sql  supabase.sql
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: attachments.rs  export.rs  links.rs  mod.rs  notion.rs  sessions.rs  settings.rs  trade_tags.rs  twelve_data.rs
src-tauri/src/models/: mod.rs  settings.rs
src-tauri/src/services/: mod.rs  notion.rs  twelve_data.rs
src-tauri/src/utils/: paths.rs
src/app/: App.tsx
src/components/: AnalyticsTable.tsx  AppLayout.tsx  AuthModal.tsx  Button.tsx  DateFilterPopover.tsx  DropZone.tsx  FilterSelect.tsx  JournalBlockEditor.tsx  PageHero.tsx  PlaceholderPanel.tsx  PreviewTable.tsx  PropertyMultiSelect.tsx  ReportBarChart.tsx  ReportLineChart.tsx  SearchableTagPopover.tsx  SettingsModal.tsx  TagDrawer.tsx  TradeChart.tsx  WorkspaceIcon.tsx
src/lib/: auth.ts  chartIndicators.ts  tradePipeline.ts
src/pages/: DashboardPage.tsx  DataPage.tsx  ImportPage.tsx  JournalPage.tsx  LibraryPage.tsx  PlaybooksPage.tsx  ReportsPage.tsx  TradesPage.tsx
src/styles/: global.css
src/types/: app.ts  chart.ts  csv.ts  headline.ts  journal.ts  journalEditor.ts  library.ts  libraryReview.ts  playbook.ts  review.ts  session.ts  trade.ts  (+1 more)
(+57 files in other folders)
